tests/fixtures/pass/variables_and_assignment.walrus
let x = 1;
println(x);
x = 5;
println(x);
let y = x + 3;
println(y);
