tests/fixtures/fail/invalid_token_ternary.walrus
let x = 10;
let y = 4;
println(x > y ? x : y);
